Update web API documentation
